Fix margin spacing on h1 element contact-info.html

--- a/Assets/CSS/styles-contact.css
+++ b/Assets/CSS/styles-contact.css
@@ -5,6 +5,7 @@ a {
 
 h1 {
     color: white;
+    margin-top: 20px;
 }
 
 .card {
